# yandex-auto-up

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml  selectel-support.patch
docs/: SELECTEL.md
scripts/: install.sh  uninstall.sh  update.sh
src/yauto/: __init__.py  __main__.py  doctor.py  models.py  paths.py  service_ctl.py  version.json
src/yauto/cli/: app.py  helpers.py  i18n.py  panel.py  update_checker.py
src/yauto/cloud/: __init__.py  auth.py  client.py  selectel_auth.py  selectel_client.py
src/yauto/config/: repository.py
src/yauto/daemon/: health.py  main.py  service.py
src/yauto/notify/: telegram.py
src/yauto/storage/: repository.py
systemd/: yandex-auto-up.service
tests/: test_cloud_client.py  test_config_repository.py  test_models.py
